kube/lookie/qbittorrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: default
  labels:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
