kube/lookie/qbittorrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-internal
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-packet-fail
    external-dns.alpha.kubernetes.io/hostname: qbit.packet.fail
spec:
  ingressClassName: traefik-internal
  rules:
    - host: qbit.packet.fail
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
  tls:
    - hosts:
        - qbit.packet.fail
      secretName: qbittorrent-internal-tls
